pkgcat/pkgcat-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: pkgcat
  namespace: kube-devops

spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: app-pkgcat
  template:
    metadata:
      labels:
        k8s-app: app-pkgcat
    spec:
      containers:
      - args:
        - python
        - manage.py
        - runserver
        - 0.0.0.0:8000
        image: registry.cn-hangzhou.aliyuncs.com/ly_ops/pkgcat:0.1.0
        imagePullPolicy: Always
        name: pkgcat
        ports:
        - containerPort: 8000
          name: 8000tcp02
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 128Mi
          requests:
            cpu: 500m
            memory: 128Mi
        volumeMounts:
        - name: pkg-cat-volume-nfs
          mountPath: /build
      volumes:
      - name: pkg-cat-volume-nfs
        nfs:
          server: 172.16.52.70
          path: /build
      imagePullSecrets:
      - name: registry-pkgcat
