pkgcat/pkgcat-nodeport-srv.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: pkgcat-service
  name: pkgcat-service
  namespace: kube-devops
spec:
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30239
  type: NodePort
  selector:
    k8s-app: app-pkgcat
